Added authorization option to SASL Plain Kafka test container.